:lipstick: Minor updates

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>mesmerized</title>
+
+	<meta name="description" content="Transform your new tabs. Be inspired with the beautiful backgrounds, inspirational quotes, weather forecasts, to-do lists and more." />
+	<meta name="keywords" content="mesmerized, extension, chromeextension, firefoxextension, mozillaextension, browserextension, newtabs, browsertabs" />
 	
 	<meta property="og:title" content="mesmerized" />
 	<meta property="og:url" content="https://mesmerized.me" />
