--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 	<meta property="og:url" content="https://mesmerized.me" />
 	<meta property="og:type" content="website" />
 	<meta property="og:description" content="Transform your new tabs. Be inspired with the beautiful backgrounds, inspirational quotes, weather forecasts, to-do lists and more." />
-	<meta property="og:image" content="assets/img/title.png" />
+	<meta property="og:image" content="https://mesmerized.me/assets/img/title.png" />
 
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:site" content="@emadalam" />
 	<meta name="twitter:title" content="mesmerized" />
 	<meta name="twitter:description" content="Transform your new tabs. Be inspired with the beautiful backgrounds, inspirational quotes, weather forecasts, to-do lists and more." />
-	<meta name="twitter:image" content="assets/img/title.png" />
+	<meta name="twitter:image" content="https://mesmerized.me/assets/img/title.png" />
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
