--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/styles.css">
 	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115888789-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'UA-115888789-2');
+	</script>
+
 	<script src="assets/js/browser-detect.min.js"></script>
 
 </head>
@@ -46,7 +56,8 @@
 		<h1>mesmerized</h1>
 		<h3>transform your browser tabs</h3>
 		<a href="javascript:;" class="btn" id="installBtn">Install</a>
-		<p id="mobileMsg">Visit on desktop browser to install.</p>
+		<p>Available for <a href="https://chrome.google.com/webstore/detail/mesmerized/ieklodmmjfoaelcnfoilfcodkmicbooc">Chrome</a> and <a href="https://addons.mozilla.org/en-US/firefox/addon/mesmerized/">Firefox</a></p>
+		<p class="hidden" id="mobileMsg">Visit on desktop browser to install</p>
 	</section>
 
 
@@ -124,6 +135,15 @@
 			return el;
 		}
 
+		function removeClass(el, className) {
+			if (el.classList) {
+				el.classList.remove(className);
+			}
+			else {
+				el.className = el.className.replace(new RegExp('(^|\\b)' + className.split(' ').join('|') + '(\\b|$)', 'gi'), ' ');
+			}
+		}
+
 		var result = browser();
 		var installBtn = document.getElementById('installBtn');
 		var mobileMsg = document.getElementById('mobileMsg');
@@ -132,16 +152,17 @@
 
 		if (result.mobile) {
 			addClass(installBtn, 'disabled');
+			removeClass(mobileMsg, 'hidden');
 		}
 		else {
-			addClass(mobileMsg, 'hidden');
-
 			if (result.name === 'chrome') {
 				installBtn.setAttribute('href', chromeWebstoreUrl);
 				installBtn.textContent = 'Install for Chrome';
 			} else if (result.name === 'firefox') {
 				installBtn.setAttribute('href', firefoxStoreUrl);
 				installBtn.textContent = 'Install for Firefox';
+			} else {
+				addClass(installBtn, 'disabled');
 			}
 		}
 	</script>
