:lipstick: Fix typos

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <li>
                 <i class="fa fa-wrench"></i>
                 <h4>Customizable Settings</h4>
-                <p>There a tons of customization options available for the extension. Configure a minimaliztic view or to your likings.</p>
+                <p>There are tons of customization options available for the extension. Configure a minimaliztic view or to your likings.</p>
             </li>
         </ul>
     </section>
