--- a/public/tabpage.html
+++ b/public/tabpage.html
@@ -8,7 +8,7 @@
           It will be replaced with the URL of the `public` folder during the build.
           Only files inside the `public` folder can be referenced from the HTML.
         -->
-        <title>mesmerized</title>
+        <title>New Tab</title>
     </head>
     <body>
         <div id="root"></div>
