--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 	<section class="gallery">
 		<a name="gallery"></a>
 		<h3 class="title">Gallery</h3>
-		<p>Give a fresh look to your new tab page. Be inspired with the beautiful backgrounds, inspirational quotes, subtle weather forecasts, set reminders, to-do lists and much more.</p>
+		<p>Give a fresh look to your new tab page. Be inspired with the beautiful backgrounds, inspirational quotes, subtle weather forecasts, sticky notes, to-do lists and much more.</p>
 		<hr>
 
 		<ul class="grid">
+			<li class="large" style="background-image: url(assets/img/screens/06.png);"></li>
 			<li class="small" style="background-image: url(assets/img/screens/01.png);"></li>
-			<li class="large" style="background-image: url(assets/img/screens/02.png);"></li>
+			<li class="small" style="background-image: url(assets/img/screens/02.png);"></li>
 			<li class="large" style="background-image: url(assets/img/screens/03.png);"></li>
-			<li class="small" style="background-image: url(assets/img/screens/04.png);"></li>
 			<li class="small" style="background-image: url(assets/img/screens/05.png);"></li>
 		</div>
 	</section>
@@ -93,8 +93,8 @@
             </li>
             <li>
                 <i class="fa fa-cloud"></i>
-                <h4>Weather Updates</h4>
-                <p>Get updated with weather conditions and a quick look of the forcast. Pick temperature displays as Celsius or Fahrenheit.</p>
+                <h4>Weather Updates &amp; Clock</h4>
+                <p>Weather updates with display options of Celsius or Fahrenheit. Track time with big digital clock that also displays date.</p>
             </li>
             <li>
                 <i class="fa fa-smile"></i>
@@ -109,14 +109,14 @@
                 <p>Keep track of things with this movable widget. Choose how long to keep the completed items for your reference.</p>
             </li>
             <li>
-                <i class="fa fa-clock"></i>
-                <h4>Clock</h4>
-                <p>So you like to see a big digital clock on your screen with current date details. We got you covered :)</p>
+                <i class="fa fa-sticky-note"></i>
+                <h4>Sticky Notes</h4>
+                <p>Quickly pen down all your thoughts and ideas with as many notes as you like. Colour code with themes to track them all.</p>
             </li>
             <li>
                 <i class="fa fa-wrench"></i>
                 <h4>Customizable Settings</h4>
-                <p>There are tons of customization options available for the extension. Configure a minimaliztic view or to your likings.</p>
+                <p>There are tons of customization options available for the extension. Configure a minimalistic view or to your likings.</p>
             </li>
         </ul>
     </section>
